Petabytes translation fix

--- a/modules/core/src/com/alee/managers/language/resources/language.xml
+++ b/modules/core/src/com/alee/managers/language/resources/language.xml
@@ -377,7 +377,7 @@
             </record>
             <record key="pb">
                 <value lang="en">PB</value>
-                <value lang="ru">ТБ</value>
+                <value lang="ru">ПБ</value>
                 <value lang="pl">PB</value>
                 <value lang="ar">بيتابايت</value>
                 <value lang="es">PB</value>
