WebBasicLabelPainter - Field "orientation" renamed to "rotation" to properly reflect its meaning LabelOrientation - Renamed to "Rotation" to properly reflect its meaning
WebSwitch - Major API and usability changes
WebSwitch - Minor style improvements
WebSwitch - JavaDoc improvements

Minor code refactoring

--- a/modules/demo/src/com/alee/demo/language/language.xml
+++ b/modules/demo/src/com/alee/demo/language/language.xml
@@ -23,12 +23,12 @@
                     <value lang="ru">Лупа</value>
                 </record>
                 <record key="state">
-                    <value lang="en">Enabled state:</value>
-                    <value lang="ru">Состояние:</value>
+                    <value lang="en">Enabled state</value>
+                    <value lang="ru">Состояние разблокированности</value>
                 </record>
                 <record key="orientation">
-                    <value lang="en">Orientation:</value>
-                    <value lang="ru">Ориентация:</value>
+                    <value lang="en">Component orientation</value>
+                    <value lang="ru">Ориентация компонентов</value>
                 </record>
             </Dictionary>
             <record key="styleid">
