--- a/modules/core/src/com/alee/managers/language/resources/language.xml
+++ b/modules/core/src/com/alee/managers/language/resources/language.xml
@@ -952,6 +952,32 @@
         </record>
     </Dictionary>
     <Dictionary name="Extended components language" prefix="ex">
+        <Dictionary name="Switch component language" prefix="switch">
+            <record key="selected">
+                <value lang="en"> </value>
+                <value lang="ru"> </value>
+                <value lang="pl"> </value>
+                <value lang="ar"> </value>
+                <value lang="es"> </value>
+                <value lang="fr"> </value>
+                <value lang="pt"> </value>
+                <value lang="de"> </value>
+                <value lang="it"> </value>
+                <value lang="tr"> </value>
+            </record>
+            <record key="deselected">
+                <value lang="en"> </value>
+                <value lang="ru"> </value>
+                <value lang="pl"> </value>
+                <value lang="ar"> </value>
+                <value lang="es"> </value>
+                <value lang="fr"> </value>
+                <value lang="pt"> </value>
+                <value lang="de"> </value>
+                <value lang="it"> </value>
+                <value lang="tr"> </value>
+            </record>
+        </Dictionary>
         <Dictionary name="Notification popup language" prefix="notification">
             <record key="yes">
                 <value lang="en">Yes</value>
