WebBasicTextFieldPainter, WebRootPanePainter - Proper border size method provided scrollbar.xml, formattedtextfield.xml, textfield.xml - Removed deprecated margin usage

--- a/modules/demo/src/com/alee/demo/language/language.xml
+++ b/modules/demo/src/com/alee/demo/language/language.xml
@@ -180,6 +180,12 @@
                         <value lang="ru">Неопределённый прогресс</value>
                     </record>
                 </Dictionary>
+                <Dictionary prefix="vertical">
+                    <record key="title">
+                        <value lang="en">Vertical progress bar</value>
+                        <value lang="ru">Вертикальный прогресс бар</value>
+                    </record>
+                </Dictionary>
             </Dictionary>
         </Dictionary>
         <Dictionary prefix="choosers">
