DemoApplication changes: - Added frame and dialog examples - Added styled label examples - Example, ExampleGroup - Moved some methods into ExampleElement for convenience - AbstractExample - Minor improvements
Styling changes:
- interfaceinspector.xml - Added new interface inspector style
- label.xml - Added vertical label style
- styledlabel.xml - Added shade and vertical label styles
- separator.xml - Added simple horizontal separator styles
- scrollpane.xml, StyleId - Added transparent scrollpane styles
- tree.xml - Added transparent tree style
- rootpane.xml - Tuned to properly fit root pane changes
- skin.xml - Moved grouppane initialization above root pane one
- StyleId - Updated with new style options

Window-related changes:
- WebFrame, WebDialog, WebLookAndFeel - Window decoration can now be set through style alone
- WebRootPaneUI, WebRootPanePainter - Various improvements and changes
- WebRootPaneUI - Removed redundant settings
- WebWindow, WebFrame, WebDialog - Now provide WebRootPane instead of JRootPane for convenience
- WebRootPaneLayout - Removed redundant spaces, they can now be set through styles

Other minor changes:
- DragManager - Added drag state marker
- AbstractMouseoverBehavior - Moved into UI module, now doesn't display mouseover while D&D operations
- language.xml - Added empty title records, replaced some spaces with special symbols to avoid reformatting issues
- SettingsManager - Minor methods and JavaDoc updates
- CollectionUtils - Added method to quickly join multiple collections
- SwingUtils - Added some missing JavaDoc

--- a/modules/core/src/com/alee/managers/language/resources/language.xml
+++ b/modules/core/src/com/alee/managers/language/resources/language.xml
@@ -151,6 +151,20 @@
             </record>
         </Dictionary>
     </Dictionary>
+    <Dictionary name="RootPane language" prefix="rootpane">
+        <record key="empty.title">
+            <value lang="en"> </value>
+            <value lang="ru"> </value>
+            <value lang="pl"> </value>
+            <value lang="ar"> </value>
+            <value lang="es"> </value>
+            <value lang="fr"> </value>
+            <value lang="pt"> </value>
+            <value lang="de"> </value>
+            <value lang="it"> </value>
+            <value lang="tr"> </value>
+        </record>
+    </Dictionary>
     <Dictionary name="OptionPane language" prefix="optionpane">
         <record key="title">
             <value lang="en">Select an option</value>
@@ -954,28 +968,28 @@
     <Dictionary name="Extended components language" prefix="ex">
         <Dictionary name="Switch component language" prefix="switch">
             <record key="selected">
-                <value lang="en"> </value>
-                <value lang="ru"> </value>
-                <value lang="pl"> </value>
-                <value lang="ar"> </value>
-                <value lang="es"> </value>
-                <value lang="fr"> </value>
-                <value lang="pt"> </value>
-                <value lang="de"> </value>
-                <value lang="it"> </value>
-                <value lang="tr"> </value>
+                <value lang="en"> </value>
+                <value lang="ru"> </value>
+                <value lang="pl"> </value>
+                <value lang="ar"> </value>
+                <value lang="es"> </value>
+                <value lang="fr"> </value>
+                <value lang="pt"> </value>
+                <value lang="de"> </value>
+                <value lang="it"> </value>
+                <value lang="tr"> </value>
             </record>
             <record key="deselected">
-                <value lang="en"> </value>
-                <value lang="ru"> </value>
-                <value lang="pl"> </value>
-                <value lang="ar"> </value>
-                <value lang="es"> </value>
-                <value lang="fr"> </value>
-                <value lang="pt"> </value>
-                <value lang="de"> </value>
-                <value lang="it"> </value>
-                <value lang="tr"> </value>
+                <value lang="en"> </value>
+                <value lang="ru"> </value>
+                <value lang="pl"> </value>
+                <value lang="ar"> </value>
+                <value lang="es"> </value>
+                <value lang="fr"> </value>
+                <value lang="pt"> </value>
+                <value lang="de"> </value>
+                <value lang="it"> </value>
+                <value lang="tr"> </value>
             </record>
         </Dictionary>
         <Dictionary name="Notification popup language" prefix="notification">
